--- a/index.html
+++ b/index.html
@@ -14,15 +14,17 @@
   <table id="yardimTablosu">
     <thead>
       <tr>
-        <th>Ad Soyad</th>
-        <th>TC</th>
-        <th>Telefon</th>
-        <th>Adres</th>
-        <th>Yapılan Yardımlar</th>
+        <th>Kayıt Tarihi</th>
+        <th>Adı Soyadı</th>
+        <th>TC / Yabancı Kimlik No</th>
+        <th>Telefon Numarası</th>
+        <th>Uyruğu</th>
+        <th>Adresi</th>
+        <th>Aile Durum Özeti</th>
       </tr>
     </thead>
     <tbody>
-      <!-- Veri buraya eklenecek -->
+      <!-- JSON'dan yüklenen veriler buraya gelecek -->
     </tbody>
   </table>
 
