--- a/index.html
+++ b/index.html
@@ -3,31 +3,64 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Yardım Listesi</title>
+  <title>İhtiyaç Sahipleri Listesi</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>İhtiyaç Sahipleri Yardım Listesi</h1>
+  <div class="container mt-4">
+    <h1>İhtiyaç Sahipleri Listesi</h1>
+    
+    <div class="row mt-4">
+      <div class="col">
+        <div class="table-responsive">
+          <table class="table table-striped table-hover">
+            <thead>
+              <tr>
+                <th>Kayıt Tarihi</th>
+                <th>Adı Soyadı</th>
+                <th>Telefon</th>
+                <th>Adres</th>
+                <th>İşlemler</th>
+              </tr>
+            </thead>
+            <tbody id="kisilerTablosu">
+              <!-- Kişiler buraya JavaScript ile eklenecek -->
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
 
-  <input type="text" id="arama" placeholder="İsimle ara..." onkeyup="filtrele()">
-  
-  <table id="yardimTablosu">
-    <thead>
-      <tr>
-        <th>Kayıt Tarihi</th>
-        <th>Adı Soyadı</th>
-        <th>TC / Yabancı Kimlik No</th>
-        <th>Telefon Numarası</th>
-        <th>Uyruğu</th>
-        <th>Adresi</th>
-        <th>Aile Durum Özeti</th>
-      </tr>
-    </thead>
-    <tbody>
-      <!-- JSON'dan yüklenen veriler buraya gelecek -->
-    </tbody>
-  </table>
-
-  <script src="script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    // Kişileri yükle ve tabloya ekle
+    fetch('data.json')
+      .then(response => response.json())
+      .then(data => {
+        const tbody = document.getElementById('kisilerTablosu');
+        
+        data.forEach(kisi => {
+          const row = document.createElement('tr');
+          row.innerHTML = `
+            <td>${kisi['KAYIT TARİHİ'] || '-'}</td>
+            <td>${kisi['ADI-SOYADI'] || '-'}</td>
+            <td>${kisi['TELEFON NUMARASI'] || '-'}</td>
+            <td>${kisi['ADRESİ'] || '-'}</td>
+            <td>
+              <a href="/detay?id=${kisi.id}" class="btn btn-primary btn-sm">
+                Detay
+              </a>
+            </td>
+          `;
+          tbody.appendChild(row);
+        });
+      })
+      .catch(error => {
+        console.error('Veri yükleme hatası:', error);
+        alert('Veriler yüklenirken bir hata oluştu');
+      });
+  </script>
 </body>
 </html>
